# slm_server

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/actions/helm-deploy/: action.yml
.github/workflows/: cd.yml  ci.yml  deploy.yml  rollback.yml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pv.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  storageclass.yaml
deploy/helm/templates/tests/: test-connection.yaml
docs/: 2025-05-06-1010-slm.excalidraw
scripts/: download.sh  helm.sh  smoke.sh  start.sh
slm_server/: app.py  config.py  embedding.py  logging.py  metrics.py  model.py  trace.py  utils.py
slm_server/utils/: __init__.py  constants.py  embedding_utils.py  ids.py  metrics.py  postprocess.py  processors.py  sampler.py  spans.py
swagger/: openapi.yaml
tests/: test_app.py  test_config.py  test_embedding.py  test_metrics.py  test_postprocess.py  test_trace.py  test_utils.py  test_utils_simple.py
tests/e2e/: conftest.py  main.py  test_api.py  test_langchain_compatibility.py
